--- a/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
+++ b/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
@@ -17,3 +17,28 @@ header:
 
 
 
+
+## معرفی دبیرستان دوره اول فرزانگان ۵ مشهد (تیزهوشان)
+
+دبیرستان دوره اول فرزانگان ۵ مشهد، به عنوان یکی از **مراکز جدید سازمان ملی پرورش استعدادهای درخشان (سمپاد)**، با هدف شناسایی و پرورش دانش‌آموزان مستعد فعالیت خود را آغاز کرده است.
+
+### **کادر مدیریتی مرکز**
+
+این مرکز آموزشی تحت مدیریت **خانم پاسدار** فعالیت می‌کند و **خانم‌ها اروجی و اسدی** به عنوان معاونین ایشان در خدمت جامعه دانش‌آموزی هستند. مجموعه فرزانگان ۵ تمامی برنامه‌های خود را بر اساس مأموریت‌های اصلی سمپاد پی‌ریزی کرده است.
+
+### **سازمان ملی پرورش استعدادهای درخشان (سمپاد)**
+
+**سازمان ملی پرورش استعدادهای درخشان** یا به اختصار **سمپاد**، نهادی است که بر امور تحصیلی دانش‌آموزان مستعد و با بهره هوشی بالا نظارت می‌کند. اگرچه در زبان عمومی این مدارس به **«مدرسه تیزهوشان»** معروف هستند، اما در واقع سمپاد یک شبکه وسیع از دبیرستان‌های دوره اول و دوم (دخترانه و پسرانه) را در شهرهای پرجمعیت‌تر مدیریت می‌کند.
+
+### **نحوه گزینش دانش‌آموزان**
+
+گزینش در مدارس سمپاد در دو مقطع کلیدی زیر از طریق آزمون‌های سراسری صورت می‌گیرد:
+
+1.  **متوسطه اول** (ورودی ششم به هفتم)
+2.  **متوسطه دوم** (ورودی نهم به دهم)
+
+---
+
+
+
+
