--- a/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
+++ b/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
@@ -5,7 +5,7 @@ dir: rtl
 title: "شروع به کار دبیرستان دوره اول فرزانگان 5 مشهد"
 date: 2025-09-16
 categories: [Manager, Sampad]
-tags: [Students, ]
+tags: [Teachers, Students]
 slug: "2025-09-16-شروع-به-کار-دبیرستان-دوره-اول-فرزانگان-5-مشهد"
 math: true
 sidebar:
@@ -20,7 +20,7 @@ header:
 
 
 
-## معرفی دبیرستان دوره اول فرزانگان ۵ مشهد (تیزهوشان)
+# معرفی دبیرستان دوره اول فرزانگان ۵ مشهد (تیزهوشان)
 
 دبیرستان دوره اول فرزانگان ۵ مشهد، به عنوان یکی از **مراکز جدید سازمان ملی پرورش استعدادهای درخشان (سمپاد)**، با هدف شناسایی و پرورش دانش‌آموزان مستعد فعالیت خود را آغاز کرده است.
 
