--- a/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
+++ b/_posts/2025-09-16-شروع -به-کار-دبیرستان-دوره-اول-فرزانگان-مشهد.md
@@ -26,7 +26,7 @@ header:
 
 ### **کادر مدیریتی مرکز**
 
-این مرکز آموزشی تحت مدیریت **خانم پاسدار** فعالیت می‌کند و **خانم‌ها اروجی و اسدی** به عنوان معاونین ایشان در خدمت جامعه دانش‌آموزی هستند. مجموعه فرزانگان ۵ تمامی برنامه‌های خود را بر اساس مأموریت‌های اصلی سمپاد پی‌ریزی کرده است.
+این مرکز آموزشی تحت مدیریت **خانم پاسدار** فعالیت می‌کند و **خانم‌ها عروجی و اسدی** به عنوان معاونین ایشان در خدمت جامعه دانش‌آموزی هستند. مجموعه فرزانگان ۵ تمامی برنامه‌های خود را بر اساس مأموریت‌های اصلی سمپاد پی‌ریزی کرده است.
 
 ### **سازمان ملی پرورش استعدادهای درخشان (سمپاد)**
 
